[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde", "clock"] }
bincode = "1.3"
zstd = "0.13"
hmac = "0.12"
hex = "0.4"
http = "1"
jsonwebtoken = "9"
once_cell = "1"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
incremental = false
strip = "symbols"
